--- a/.htaccess
+++ b/.htaccess
@@ -6,5 +6,10 @@ RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
+RewriteRule ^/wp/css/(.*) css/$1 [QSA]
+RewriteRule ^/wp/img/(.*) img/$1 [QSA]
+RewriteRule ^/wp/js/(.*) js/$1 [QSA]
+RewriteRule ^/wp/font/(.*) font/$1 [QSA]
+RewriteRule ^/wp/plugins/(.*) plugins/$1 [QSA]
 </IfModule>
 # END WordPress
