Remove hardcoded footer; Add branding

--- a/content/themes/fsinf-v2/package.json
+++ b/content/themes/fsinf-v2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "roots",
+  "name": "fsinf-v2 (roots)",
   "version": "6.5.0",
   "author": "Ben Word <ben@benword.com>",
   "homepage": "http://roots.io",
